# hackathon2024

./: .gitignore  README.md
3D-photos-app/: icon.svg.import  project.godot  scene.tscn  script_product.gd
3D-photos-app/images/: bg.jpg.import  coca-cola-shelfs.jpg.import  wisky.png.import
salsify-lens/: README.md  pyproject.toml
salsify-lens/salsify_lens/: configs.py  detect_eyes_img.py  object_detection copy 2.py  object_detection copy.py  object_detection.py  train_annotated.py  train_model.py  utils.py  video_eye_closed_detection_1.py  video_eye_detection_1.py  video_sleep_detection.py  web_demo.py
salsify-lens/salsify_lens/core/: logger.py
salsify-lens/salsify_lens/raw_images/coca_cola/annotations/: cola_hand.json  cola_shelf.json
